Edit: Improve performance by switching all PNGs to webp

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The official ResetSec website">
     <title>ResetSec</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/assets/logo/logo.png" type="image/png">
+    <link rel="shortcut icon" href="/assets/logo/logo.webp" type="image/webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <script src="script.js" defer></script>
 </head>
 
 <body>
     <div class="side-bar">
-        <img src="/assets/logo/logo.png" alt="ResetSec">
+        <img src="/assets/logo/logo.webp" alt="ResetSec">
         <i>Next-gen world-class hackers...</i>
         <ul>
             <li>
