Add: Fancy splash screen

--- a/index.html
+++ b/index.html
@@ -13,33 +13,41 @@
 </head>
 
 <body>
-    <div class="side-bar">
-        <img src="/assets/logo/logo.webp" alt="ResetSec">
-        <i>Next-gen world-class hackers...</i>
-        <ul>
-            <li>
-                <a target="_blank" href="https://ctftime.org/team/266022">
-                    <i class="fa-solid fa-flag"></i>
-                    <span>CTFTime</span>
-                </a>
-            </li>
-            <li>
-                <a target="_blank" href="https://github.com/ResetSec"><i class="fa-brands fa-github"></i>
-                    <span>GitHub</span></a>
-            </li>
-        </ul>
-        <button class="terminal-btn">Switch to terminal view</button>
-    </div>
-    <div class="main-container">
-        <h1>ResetSec</h1>
-        <p>We are a CTF Team created by some nerds on Reddit that hopped into a discord together and instantly became a
-            big, weird, international family :P <i>(no, we don't know how it happened)</i></p>
+    <main>
+        <div class="side-bar">
+            <img src="/assets/logo/logo.webp" alt="ResetSec">
+            <i>Next-gen world-class hackers...</i>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://ctftime.org/team/266022">
+                        <i class="fa-solid fa-flag"></i>
+                        <span>CTFTime</span>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://github.com/ResetSec"><i class="fa-brands fa-github"></i>
+                        <span>GitHub</span></a>
+                </li>
+            </ul>
+            <button class="terminal-btn">Switch to terminal view</button>
+        </div>
+        <div class="main-container">
+            <h1>ResetSec</h1>
+            <p>We are a CTF Team created by some nerds on Reddit that hopped into a discord together and instantly
+                became a
+                big, weird, international family :P <i>(no, we don't know how it happened)</i></p>
 
-        <h1>Team Members</h1>
-        <table class="active-members"></table>
+            <h1>Team Members</h1>
+            <table class="active-members"></table>
 
-        <h1>Former active members</h1>
-        <table class="former-members"></table>
+            <h1>Former active members</h1>
+            <table class="former-members"></table>
+        </div>
+    </main>
+
+    <div class="splash-screen">
+        <img class="splash-img" src="/assets/logo/logo.webp" alt="ResetSec">
+        <h1 class="splash-title">ResetSec</h1>
     </div>
 </body>
 
