icon fix & logo

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The official ResetSec website">
     <title>ResetSec</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/assets/logo/logo.webp" type="image/webp">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="icon" type="image/png" sizes="128x128" href="/reset-console/assets/logo/logo-128.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/reset-console/assets/logo/logo-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/reset-console/assets/logo/logo-32.png">
     <script src="script.js" defer></script>
 </head>
 
@@ -20,12 +22,12 @@
             <ul>
                 <li>
                     <a target="_blank" href="https://ctftime.org/team/266022">
-                        <i class="fa-solid fa-flag"></i>
+                        <i class="fa-solid fa-flag"></i> 
                         <span>CTFTime</span>
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://github.com/ResetSec"><i class="fa-brands fa-github"></i>
+                    <a target="_blank" href="https://github.com/ResetSec"><i class="fab fa-github"></i>
                         <span>GitHub</span></a>
                 </li>
             </ul>
