Add: Team Stats

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>
                     <a target="_blank" href="https://ctftime.org/team/266022">
-                        <i class="fa-solid fa-flag"></i> 
+                        <i class="fa-solid fa-flag"></i>
                         <span>CTFTime</span>
                     </a>
                 </li>
@@ -44,6 +44,9 @@
 
             <h1>Former active members</h1>
             <table class="former-members"></table>
+
+            <h1>Team Stats</h1>
+            <table class="team-stats"></table>
         </div>
     </main>
 
